QueueEventListener disable notifications for remote events (#87)